attempted fix at strange border-radius on mobile inputs

--- a/one-commercial/src/components/contactPage/contatForm/contactform.module.sass
+++ b/one-commercial/src/components/contactPage/contatForm/contactform.module.sass
@@ -35,6 +35,8 @@
       input
           border: none
           border-bottom: 1px solid black
+          border-radius: 0
+          -webkit-appearance: none
   .inputsubmit
       display: flex
       flex-direction: column
